scenarios/06-extensions/http-ext-proc-shared-backend/30-httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shared-backend-route
  namespace: ext-proc-shared-backend
  labels:
    app.kubernetes.io/part-of: demo
spec:
  parentRefs:
    - name: shared-backend-gateway
      namespace: gateway-system
      sectionName: http
  hostnames:
    - shared-backend.example.test
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: cilium.io
            kind: CiliumEnvoyExtProcFilter
            name: shared-backend-ext-proc
      backendRefs:
        - name: shared
          port: 8080
